--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boilerplate</title>
+  <title>Thronepedia</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   
-
+  <header class="header">
+    <h1 class="header__title">Thronepedia</h1>
+  </header>
 
   <script src="scripts/app.js"></script>
 </body>
