--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h1 class="header__title">Thronepedia</h1>
   </header>
 
+  <main class="main">
+    
+  </main>
+
   <script src="scripts/app.js"></script>
 </body>
 </html>
