--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   </header>
 
   <main class="main">
-    
+    <div class="main__wrapper">
+      <div class="main__wrapper__search">
+          <input type="text" id="searchInput" class="main__wrapper__search__input" placeholder="Search for a character...">
+      </div>
+
+      <div class="main__wrapper__cards"></div>
+    </div>
   </main>
 
   <script src="scripts/app.js"></script>
