--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           <input type="text" id="searchInput" class="main__wrapper__search__input" placeholder="Search for a character...">
       </div>
 
+      <div class="main__wrapper__results" id="resultsMessage"></div>
+
       <ul class="main__wrapper__cards" id="cardsList"></ul>
     </div>
   </main>
