--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main__wrapper">
       <div class="main__wrapper__search">
           <input type="text" id="searchInput" class="main__wrapper__search__input" placeholder="Search for a character...">
-          <span class="main__wrapper__search__reset">Clear</span>
+          <span class="main__wrapper__search__reset" id="searchReset">Clear</span>
       </div>
 
       <div class="main__wrapper__results" id="resultsMessage"></div>
