Add custom message Searching... in UI

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <span class="main__wrapper__search__reset" id="searchReset">Clear</span>
       </div>
 
-      <div class="main__wrapper__results" id="resultsMessage"></div>
+      <div class="main__wrapper__results">
+        <p class="main__wrapper__results__message" id="resultsMessage"></p>
+      </div>
 
       <ul class="main__wrapper__cards" id="cardsList"></ul>
     </div>
